--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,51 @@
 {
   "name": "dongfenghulian/alert-data-client",
-  "description": "alert-data-client",
-  "authors": [
-    {
-      "name": "dfhl",
-      "email": "dev@estrend.com"
-    }
+  "type": "library",
+  "license": "MIT",
+  "keywords": [
+    "php",
+    "hyperf"
   ],
+  "description": "",
   "autoload": {
-    "files": [
-      "src/Function.php"
-    ],
     "psr-4": {
       "AlertClient\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "HyperfTest\\": "tests"
+    }
+  },
   "require": {
-    "php": ">=8.0",
-    "ext-mysqli": "*",
-    "ext-pdo": "*",
-    "ext-json": "*",
-    "ext-openssl": "*",
-    "ext-redis": "*",
-    "ext-simplexml": "*",
-    "ext-sockets": "*",
-    "ext-xmlwriter": "*",
-    "ext-zip": "*"
+    "php": ">=7.3",
+    "hyperf/config": "3.0.*",
+    "dawnco/hyperf-wlib": "3.0.*"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.0",
+    "mockery/mockery": "^1.0",
+    "phpstan/phpstan": "^1.0",
+    "phpunit/phpunit": ">=7.0",
+    "swoole/ide-helper": "^4.5"
+  },
+  "suggest": {
+    "swow/swow": "Required to create swow components."
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "scripts": {
+    "test": "phpunit -c phpunit.xml --colors=always",
+    "analyse": "phpstan analyse --memory-limit 1024M -l 0 ./src",
+    "cs-fix": "php-cs-fixer fix $1"
+  },
+  "extra": {
+    "hyperf": {
+      "config": "AlertClient\\ConfigProvider"
+    }
   }
 }
